# ChatFastAPI

./: .gitignore  README.md  pyproject.toml
app/: main.py
app/api/: router_page.py  router_socket.py  schemas.py
app/static/: index.js
app/templates/: home.html  index.html
tests/: conftest.py  test_router_page.py  test_router_socket.py
